--- a/AutoCmdb/templates/category/base.html
+++ b/AutoCmdb/templates/category/base.html
@@ -12,7 +12,6 @@
     {% url 'asset' as asset %}
     {% url 'department' as department %}
     {% url 'category' as category %}
-    {% url 'asset_input' as asset_input %}
 
     {% url 'host' as host %}
     {% url 'user' as user %}
@@ -20,25 +19,27 @@
 
     <ul class="nav nav-sidebar">
 
-        <li {% if request.path == asset %}class="active"{% endif %}><a href={{ asset }}>資產管理</a></li>
-        <li {% if request.path == asset_input %}class="active"{% endif %}><a href="{{ asset_input }}">匯入</a></li>
-        <li><a href="{% url 'asset_output' %}" target="_blank">匯出</a></li>
+
+        <li {% if request.path == category %}class="active"{% endif %}><a href={{ category }}>類型管理</a></li>
+        <li><a href="#">匯入</a></li>
+        <li><a href="#">匯出</a></li>
 
     </ul>
-
 
     <ul class="nav nav-sidebar">
+
+        <li {% if request.path == asset %}class="active"{% endif %}><a href={{ asset }}>資產管理</a></li>
         <li {% if request.path == user %}class="active"{% endif %}><a href={{ user }}>用戶管理</a></li>
         <li {% if request.path == department %}class="active"{% endif %}><a href={{ department }}>部門管理</a></li>
-        <li {% if request.path == category %}class="active"{% endif %}><a href={{ category }}>類型管理</a></li>
+
     </ul>
+
+
     <ul class="nav nav-sidebar">
 
         <li {% if request.path == host %}class="active"{% endif %}><a href={{ host }}>運維管理</a></li>
 
-
     </ul>
-
 
 
 {% endblock %}
