--- a/AutoCmdb/templates/category/index.html
+++ b/AutoCmdb/templates/category/index.html
@@ -1,4 +1,4 @@
-{% extends 'asset/base.html' %}
+{% extends 'category/base.html' %}
 {% load asset_tags %}
 
 
@@ -7,71 +7,73 @@
 
 {% block content %}
 
-
     <ol class="breadcrumb">
-        <li><a href="#">部門管理</a></li>
-
+        <li><a href="#">類型</a></li>
     </ol>
+
+
 
     <div class="panel panel-default" style="padding: 20px">
 
         <div class="row">
 
             <div class="col-md-4">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#dentform_add_Modal">
-                    新增部門
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#caryform_add_Modal">
+                    新增類型
                 </button>
             </div>
         </div>
+
+        <div class="alert alert-danger" style="margin-top: 20px;display: none">
+            <strong></strong>
+        </div>
+
 
         <div class="table-responsive">
             <table class="table" id="mytable" style="margin-top: 20px">
                 <thead>
                 <tr>
-                    <th>ID</th>
                     <th>名稱</th>
-                    <th>簡稱</th>
-                    <th>工/代號</th>
-                    <th>工/代號長度</th>
-                    <th>負責人</th>
+                    <th>代號</th>
+                    <th>數量</th>
                     <th>操作</th>
+
                 </tr>
                 </thead>
                 <tbody>
-                {% for department in department_obj %}
+                {% for category in category_obj %}
 
                     <tr>
-                        <td name="id">
-                            {{ department.id }}
+                        <td name="id" style="display: none">
+
+
+                            <input type="text" class='form-control match-content' value="{{ category.id }}">
+
                         </td>
 
-                        <td name="name">{{ department.name }}部</td>
-                        <td name="code">{{ department.code }}</td>
-                        <td name="block_number">{{ department.block_number }}</td>
-                        <td name="block_number_len">{{ department.block_number_len }}</td>
-                        <td name="user">
-
-                            <span class="form-control-static">
-                                {{ department.user }}
+                        <td name="name">
+                            <span>
+                            {{ category.name }}
                             </span>
-                            <select class="form-control" style="display: none">
+                            <input type="text" class='form-control match-content' value="{{ category.code }}"
+                                   style="display: none">
+                        </td>
 
-                                <option value="">-----</option>
 
+                        <td name="code">
 
-                                {% for user in user_obj %}
-                                    {% if department.user   ==  user %}
-                                        <option selected
-                                                value="{{ user.id }}">{{ user }}
-                                        </option>
-                                    {% else %}
-                                        <option value="{{ user.id }}">{{ user }}</option>
-                                    {% endif %}
+                            <span>
 
-                                {% endfor %}
-                            </select>
+                                {{ category.code }}
+
+                            </span>
+
+                            <input type="text" class='form-control match-content' value="{{ category.code }}"
+                                   style="display: none">
 
                         </td>
+                        <td>{% get_category_column category %}</td>
+
                         <td>
                             <i class="fas fa-pen"></i>
                             <i class="fas fa-trash-alt"></i>
@@ -81,19 +83,18 @@
 
                 </tbody>
 
+                <!-- 分頁 -->
 
+                <tfoot>
+                <th colspan="7">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination pull-right">
+                            {% get_pageer cary_obj search_field %}
+                        </ul>
+                    </nav>
 
-            <tfoot>
-            <th colspan="7">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination pull-right">
-                        {% get_pageer dent_obj search_field %}
-                    </ul>
-                </nav>
-
-            </th>
-
-            </tfoot>
+                </th>
+                </tfoot>
 
 
             </table>
@@ -103,93 +104,61 @@
 
 
 
-    <!--- 新增部門表單-->
-    <div class="modal fade" id="dentform_add_Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <!--- 新增類型表單 --->
+    <div class="modal fade" id="caryform_add_Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
 
-                    <h4 class="modal-title" id="myModalLabel">新增部門</h4>
+                    <h4 class="modal-title" id="myModalLabel">新增類型</h4>
                 </div>
                 <div class="modal-body">
-
-
-                <!-- 錯誤提示-->
+                    <!-- 錯誤提示-->
                     <div class="alert alert-danger">
                         <strong></strong>
                     </div>
-
-
-                    <form method="post" id="dentform_add">
+                    <form method="post" id="caryform_add">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label class="col-form-label">部門名稱</label>
+                            <label class="col-form-label">名稱</label>
                             <input type="text" name="name" class="form-control" placeholder="">
                         </div>
 
                         <div class="form-group">
-                            <label class="col-form-label">簡稱</label>
+                            <label class="col-form-label">代碼</label>
                             <input type="text" name="code" class="form-control" placeholder="">
                         </div>
-
-                        <div class="form-group">
-                            <label class="col-form-label">工/代號</label>
-                            <input type="number" name="block_number" class="form-control" placeholder="">
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-form-label">工/代號長度</label>
-                            <input type="number" name="block_number_len" class="form-control" placeholder="">
-                        </div>
-
-
-                        <div class="form-group">
-                            <label class="col-form-label">資產負責人</label>
-                            <select id='user_add' name="manager" class="form-control">
-                                <option value="">-------</option>
-
-                                {% for user in user_obj %}
-
-                                    <option value="{{ user.id }}">{{ user.name }}({{ user.dent.block_number }}{{ user.code }})</option>
-
-                                {% endfor %}
-                            </select>
-                        </div>
-
 
                     </form>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <button id="dentform_add_submit" type="button" class="btn btn-primary">新增</button>
+                    <button id="caryform_add_submit" type="button" class="btn btn-primary">新增</button>
                 </div>
             </div>
         </div>
     </div>
 
 
+    <!--- 刪除類型表單 --->
 
-
-
-    <!--- 刪除部門表單 -->
-
-    <div class="modal fade" id="dentform_del_Modal" tabindex="-1" role="dialog">
+    <div class="modal fade" id="caryform_del_Modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">刪除部門</h4>
+                    <h4 class="modal-title">刪除類型</h4>
                 </div>
                 <div class="modal-body">
                     <p>您確定要刪除<span style="color: red"></span><input type="number" style="display:none;">嗎</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <button id="dentform_del_submit" type="button" class="btn btn-primary">確認</button>
+                    <button id="caryform_del_submit" type="button" class="btn btn-primary">確認</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -200,8 +169,6 @@
 
 
 {% endblock %}
-
-
 
 
 
@@ -227,17 +194,24 @@
 
 
         // 初始 新增類型表單
-        $('#dentform_add_Modal').on('show.bs.modal', function (event) {
+        $('#caryform_add_Modal').on('show.bs.modal', function (event) {
 
-            $("#dentform_add_Modal .alert-danger").hide();
+            $("#caryform_add_Modal .alert-danger").hide();
+
 
         });
 
 
+        // 確認 新增類型表單
+        $("#caryform_add_submit").on('click', function () {
+
+            $("#caryform_add").submit();
+
+        });
 
 
-        // 提交 新增資產表單
-        $("#dentform_add").on("submit", function (e) {
+        // 提交 新增類型表單
+        $("#caryform_add").on("submit", function (e) {
             //console.log(e);
             //console.log($(this));
             var postData = $(this).serializeArray();
@@ -252,15 +226,17 @@
 
                     if (callback.status == 'ok') {
 
-                        $('#dentform_add_Modal').modal('hide');
+                        $('#caryform_add_Modal').modal('hide');
                         location.reload();
 
-                    }else{
-                        //新增錯誤
-                        $("#dentform_add_Modal .alert-danger").show();
-                        $("#dentform_add_Modal .alert-danger strong").text(callback.msg);
+                    } else {
+                        //請輸入資料
+                        $("#caryform_add_Modal .alert-danger").show();
+                        $("#caryform_add_Modal .alert-danger strong").text(callback.msg);
+
 
                     }
+
 
                 },
                 error: function () {
@@ -271,109 +247,107 @@
         });
 
 
-        $("#dentform_add_submit").on('click', function () {
-
-            $("#dentform_add").submit();
-
-        });
-
-
         //編輯 EditData : Change icon
         $("#mytable").on('click', ".fa-pen", function (ele) {
             console.log('edit');
-
             $(this).attr('data-icon', 'file');
-
             tds = $(this).parent().prevAll();
             tr = $(this).closest("tr");
             var obj_id = tr.find("[name='id']").text();
-
             //console.log(obj_id);
 
             $.each(tds, function (i, ele) {
                 var span_tag = $(this).find("span");
                 var input_tag = $(this).find("input");
 
-                //user
-                select_list = ['user'];
+                select_list = [];
+                input_list = ['name', 'code'];
+
 
                 n = $(this).attr("name");
 
-
                 if (select_list.includes(n)) {
-                    console.log(n);
+
+                    //console.log(n);
                     span_tag.hide();
                     $(this).find('select').show();
+
+                }
+
+
+                if (input_list.includes(n)) {
+                    span_tag.hide();
+                    //console.log(span_tag);
+                    input_tag.val($.trim(span_tag.text()));
+                    input_tag.show()
                 }
 
             });
 
-
         });
-
 
         //SaveData : PUT
         $("#mytable").on('click', ".fa-file", function (ele) {
-
             console.log('save');
-            $(this).attr('data-icon', 'pen');
 
             tr = $(this).closest('tr');
             //console.log(tr);
             tds = $(this).parent().prevAll();
             //console.log(tr);
 
-
-            id = $.trim(tr.find('[name="id"]').text());
-            user = tr.find('[name="user"]').find("select").val();
+            var id = tr.find('[name="id"]').find("input").val();
+            var name = tr.find('[name="name"]').find("input").val();
+            var code = tr.find('[name="code"]').find("input").val();
 
             data = {
                 csrfmiddlewaretoken: '{{ csrf_token }}',
                 id: id,
-                user: user,
-
+                name: name,
+                code: code,
             };
 
-            //console.log(data);
-
+            console.log(data);
 
             $.ajax({
-                headers: {
-                    'X-HTTP-Method-Override': 'PATCH'
-                },
+
                 url: "",
                 data: data,
                 type: 'PUT',
                 async: false,
                 success: function (callback) {
-                    console.log(callback);
+                    //console.log(callback);
 
                     if (callback.status == 'ok') {
-                        put_status = true
+                        put_status = true;
+                        put_msg = callback.msg;
 
                     } else {
-                        put_status = false
+                        put_status = false;
+                        put_msg = callback.msg;
                     }
 
                 },
                 error: function () {
-                    put_status = false
+                    put_status = false;
+                    put_msg = callback.msg;
 
                 }
 
             });
 
-
             if (put_status) {
+                // 修改完成
                 $(this).attr('data-icon', 'pen');
+                $(".panel-default .alert-danger strong").text("");
+                $(".panel-default .alert-danger").hide();
                 $.each(tds, function (i, ele) {
 
                     var span_tag = $(this).find("span");
                     var input_tag = $(this).find("input");
                     var select_tag = $(this).find('select');
 
-                    select_list = ['user'];
-                    input_list = [];
+                    select_list = [];
+                    input_list = ['name', 'code'];
 
                     n = $(this).attr("name");
 
@@ -392,48 +366,52 @@
                         span_tag.show();
                         span_tag.text($.trim(input_tag.val()));
                         input_tag.hide()
+
                     }
 
+
                 })
+
+            } else {
+
+                $(".panel-default .alert-danger strong").text(put_msg);
+                $(".panel-default .alert-danger").show()
+
 
             }
 
 
         });
 
-
         // 刪除 DelData : Del icon
         $("#mytable").on('click', ".fa-trash-alt", function (ele) {
-
             console.log('del');
-
             tr = $(this).closest("tr");
-
-            var id = $.trim(tr.find("[name='id']").text());
+            var id = $.trim(tr.find("[name='id'] input").val());
             var name = $.trim(tr.find("[name='name']").text());
-            //console.log($.trim(id),$.trim(name));
+            console.log($.trim(id),$.trim(name));
 
-            $('#dentform_del_Modal .modal-body').find('span').text(name);
-            $('#dentform_del_Modal .modal-body').find('input').val(id);
-            $('#dentform_del_Modal').modal('show');
+            $('#caryform_del_Modal .modal-body').find('span').text(name);
+            $('#caryform_del_Modal .modal-body').find('input').val(id);
+            $('#caryform_del_Modal').modal('show');
 
         });
 
 
         // 提交刪除
 
-        $("#dentform_del_submit").on('click', function (event) {
+        $("#caryform_del_submit").on('click', function (event) {
 
 
-            var name = $('#dentform_del_Modal .modal-body').find('span').text();
-            var id = $('#dentform_del_Modal .modal-body').find('input').val();
+            var name = $('#caryform_del_Modal .modal-body').find('span').text();
+            var id = $('#caryform_del_Modal .modal-body').find('input').val();
 
             console.log(name, id);
 
             data = {id: id};
 
             $.ajax({
-                url: "",
+                url: "{% url 'category' %}",
                 data: data,
                 type: 'DELETE',
                 success: function (callback) {
@@ -442,8 +420,7 @@
                     if (callback.status == 'ok') {
 
                         tr.remove();
-                        $('#dentform_del_Modal').modal('hide');
-
+                        $('#caryform_del_Modal').modal('hide');
 
                     }
                 }
