--- a/AutoCmdb/templates/asset/asset_edit.html
+++ b/AutoCmdb/templates/asset/asset_edit.html
@@ -312,7 +312,7 @@
         // 檢查狀態
         function ch_status_ele(e) {
 
-            if (e.value == "2") {
+            if (e.value == "使用中") {
                 $("#id_department").removeAttr("disabled").val("");
                 $("#id_manager").removeAttr("disabled").val("");
 
