--- a/AutoCmdb/templates/asset/asset_input.html
+++ b/AutoCmdb/templates/asset/asset_input.html
@@ -6,11 +6,7 @@
 {% block head %}
     <!-- CSS -->
     <link href="/static/css/bootstrap-datepicker.css" rel="stylesheet">
-
     <link rel="stylesheet" href="/static/css/bootstrap-select.css">
-
-
-
 
     <!--  JavaScript -->
     <script src="/static/js/bootstrap-datepicker.js"></script>
@@ -20,22 +16,14 @@
     <script src="/static/js/bootstrap-select.js"></script>
 
 
+    <link rel="stylesheet" href="/static/css/bootstrap-fileinput.css">
 
-
-    <link rel="stylesheet" href="/static/css/fileinput.css">
-
-    <script src="/static/js/fileinput.js"></script>
+    <script src="/static/js/bootstrap-fileinput.js"></script>
+    <script src="/static/js/bootstrap-fileinput_zh-TW.js"></script>
 
 
     <style>
-        .col-md-2.col-form-label, .col-md-6.form-group, .col-md-10.form-control-static {
-            padding-left: 15px;
-        }
 
-        .form-control-static {
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
     </style>
 
 
@@ -58,12 +46,39 @@
 
         你可以在這裡下載`範例檔案`, 或是直接上傳檔案進行匯入。
 
-        <input id="input-b2" name="input-b2" type="file" class="file" data-show-preview="false"
-               data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+        <input id="input-b2" name="file" type="file" class="file" data-show-preview="false">
 
-
+        {% csrf_token %}
     </div>
 
+
+
+    <!--- 新增完成 表單-->
+    <div class="modal fade" id="Modal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title"></h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <a href="{% url 'asset' %}" class="btn btn-primary" role="button">返回列表</a>
+                    <a href="{% url 'asset_input' %}" class="btn btn-success" role="button">繼續上傳</a>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 
 
@@ -77,19 +92,35 @@
 
     <script>
 
-
-        $('[name="csrfmiddlewaretoken"]').val();
+        var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 
 
         $("#input-b2").fileinput({
-            language: "zh",
+            language: "zh-TW",
             allowedFileExtensions: ["csv"],
-
             mainClass: "input-group-lg", //文件输入框为大型号
-            uploadUrl: "{% url 'asset_input' %}" //上传图片的服务器地址
-        }).on('fileuploaded', function (event, data, previewId, index) {
-            console.log("asset_input")
+            uploadUrl: "{% url 'asset_input' %}", //上传图片的服务器地址
+            uploadExtraData: {
+                "csrfmiddlewaretoken": csrftoken //帶上CSRF参数
+            },
+
         });
+
+
+        // 上傳成功
+        $("#input-b2").on('fileuploaded', function (event, data, previewId, index) {
+            console.log("asset_input fileuploaded");
+            console.log(data);
+
+            if (data.response.status == 'ok') {
+                console.log("response ok")
+            } else {
+                console.log("response error")
+
+            }
+
+        });
+
 
     </script>
 
