--- a/AutoCmdb/templates/asset/asset_edit.html
+++ b/AutoCmdb/templates/asset/asset_edit.html
@@ -1,7 +1,7 @@
 {% extends 'asset/base.html' %}
 {% load asset_tags %}
 
-
+{% block title %}更改資產{% endblock %}
 
 {% block head %}
     <!-- CSS -->
