--- a/AutoCmdb/templates/base.html
+++ b/AutoCmdb/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
 
-    {% block title %}CMDB{% endblock %}
+    <title>{% block title %}CMDB{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
