--- a/AutoCmdb/templates/user/user_add.html
+++ b/AutoCmdb/templates/user/user_add.html
@@ -1,7 +1,7 @@
 {% extends 'user/base.html' %}
 {% load asset_tags %}
 
-
+{% block title %}新增用戶{% endblock %}
 
 {% block head %}
     <!-- CSS -->
